# wordle-solver

./: .flake8  Makefile  README.md  pyproject.toml
wordle/: __main__.py  query.py  statistics.py  words.py
